added gitignore, urls open in new window

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                     <h4>Patrick</h4>
                     <p>Events & Data</p>
-                    <a class="btn btn-outline-light" href="https://patrickj188.github.io/Responsive-Portfolio/portfolio.html" target="blank">Portfolio</a>
+                    <a class="btn btn-outline-light" href="https://patrickj188.github.io/Responsive-Portfolio/portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
                 </div>
                 <div class="col-sm-3 team-member">
                     <div class="team-img">
@@ -99,7 +99,7 @@
                     </div>
                     <h4>Eli</h4>
                     <p>Fitness</p>
-                    <a class="btn btn-outline-light" href="https://evg7393.github.io/Responsive-Portfolio/portfolio.html" target="blank">Portfolio</a>
+                    <a class="btn btn-outline-light" href="https://evg7393.github.io/Responsive-Portfolio/portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
                 </div>
                 <div class="col-sm-3 team-member">
                     <div class="team-img">
@@ -107,7 +107,7 @@
                     </div>
                     <h4>Chris</h4>
                     <p>Food & Style</p>
-                    <a class="btn btn-outline-light" href="https://crcass.github.io/react-portfolio/" target="blank">Portfolio</a>
+                    <a class="btn btn-outline-light" href="https://crcass.github.io/react-portfolio/" target="_blank" rel="noopener noreferrer">Portfolio</a>
                 </div>
                 <div class="col-sm-3 team-member">
                     <div class="team-img">
@@ -115,7 +115,7 @@
                     </div>
                     <h4>Daniel</h4>
                     <p>Maps</p>
-                    <a class="btn btn-outline-light" href="https://danbrit.github.io/responsive-portfolio/portfolio.html" target="blank">Portfolio</a>
+                    <a class="btn btn-outline-light" href="https://danbrit.github.io/responsive-portfolio/portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
                 </div>
             </div>
         </div>
@@ -365,7 +365,7 @@
                         <p class="card-text test" id="savedChoice-food-address"></p>
                         <h5 class="card-title save-header">Maybe a show?</h5>
                         <p class="card-text test savedChoice-event"></p>
-                        <a class="card-text test" href="" target="blank" id="savedChoice-event-buy">Click to Learn More</a>
+                        <a class="card-text test" href="" target="_blank" rel="noopener noreferrer" id="savedChoice-event-buy">Click to Learn More</a>
                         <h5 class="card-title save-header">Get that workout in</h5>
                         <p class="card-text user-exercise"></p>
                         <p class="card-text" id="user-exercise-address"></p>
