update portfolio link

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                     <h4>Chris</h4>
                     <p>Food & Style</p>
-                    <a class="btn btn-outline-light" href="https://crcass.github.io/react-portfolio/" target="_blank" rel="noopener noreferrer">Portfolio</a>
+                    <a class="btn btn-outline-light" href="https://crcass.github.io/portfolio/" target="_blank" rel="noopener noreferrer">Portfolio</a>
                 </div>
                 <div class="col-sm-3 team-member">
                     <div class="team-img">
