--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Signal | We Know" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://crcass.github.io/project-one/" />
-    <meta property="og:image" content="./assets/images/signal.png" />
+    <meta property="og:image" content="https://crcass.github.io/project-one/signal.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:400,600,700,800,900" rel="stylesheet">
