--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Signal | We Know" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://crcass.github.io/project-one/" />
-    <meta property="og:image" content="https://crcass.github.io/project-one/signal.jpg" />
+    <meta property="og:image" content="https://crcass.github.io/project-one/assets/images/signal.jpg" />
     <meta property="og:image:width" content="1800" />
     <meta property="og:image:height" content="1352" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
