--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
     <meta property="og:title" content="Signal | We Know" />
     <meta property="og:type" content="website" />
+    <meta property="og:description" content="SMU Coding Bootcamp Project">
     <meta property="og:url" content="https://crcass.github.io/project-one/" />
     <meta property="og:image" content="https://crcass.github.io/project-one/assets/images/signal.jpg" />
     <meta property="og:image:width" content="1800" />
