--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
-    <meta property="og:title" content="Signal | We Know" />
+    <meta property="og:title" content="Signal - We Know" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="SMU Coding Bootcamp Project">
     <meta property="og:url" content="https://crcass.github.io/project-one/" />
