--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta property="og:image" content="https://crcass.github.io/project-one/assets/images/signal.jpg" />
     <meta property="og:image:width" content="1800" />
     <meta property="og:image:height" content="1352" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:400,600,700,800,900" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
@@ -27,7 +28,8 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top justify-content-between">
         <a class="navbar-brand" href="#"><span id="logo">SIGNAL</span> <span id="tagline">We Know.</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -66,7 +68,8 @@
         </div>
     </div>
     <div class="text-center button-wrapper">
-        <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#startModal" id="start-button">Get Started
+        <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#startModal"
+            id="start-button">Get Started
         </button>
     </div>
 
@@ -75,13 +78,20 @@
     <div class="container text-center rounded" id="learn">
         <div class="info" id="info-top">
             <h2>We get it, you're busy</h2>
-            <p>When you travel for business, it can feel like you're in a foreign country. There are so many choices when it comes to food, events, and exercise that it can be hard to find just the right thing. You spend all day making tough decisions, and the last thing on your mind is finding the best place to eat or finding the right workout. That's where we come in.</p>
-            <p>We take the guess work out of finding those perfect places so you can spend your precious down time actually enjoying them.</p>
+            <p>When you travel for business, it can feel like you're in a foreign country. There are so many choices
+                when it comes to food, events, and exercise that it can be hard to find just the right thing. You spend
+                all day making tough decisions, and the last thing on your mind is finding the best place to eat or
+                finding the right workout. That's where we come in.</p>
+            <p>We take the guess work out of finding those perfect places so you can spend your precious down time
+                actually enjoying them.</p>
         </div>
         <div class="info">
             <h2>How it works</h2>
-            <p>Simply enter your name & preferences for food, events, and exercise. Let us handle the rest. In seconds you'll have the very best of each category, right at your fingertips. We'll give you two great options to choose from in each category and directions to each place.</p>
-            <p>We're obsessed with sorting through the noise to get you out of that hotel room and in to the best places your city has to offer.</p>
+            <p>Simply enter your name & preferences for food, events, and exercise. Let us handle the rest. In seconds
+                you'll have the very best of each category, right at your fingertips. We'll give you two great options
+                to choose from in each category and directions to each place.</p>
+            <p>We're obsessed with sorting through the noise to get you out of that hotel room and in to the best places
+                your city has to offer.</p>
             <p>Welcome to Signal. We Know.</p>
         </div>
     </div>
@@ -98,7 +108,9 @@
                     </div>
                     <h4>Patrick</h4>
                     <p>Events & Data</p>
-                    <a class="btn btn-outline-light" href="https://patrickj188.github.io/Responsive-Portfolio/portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
+                    <a class="btn btn-outline-light"
+                        href="https://patrickj188.github.io/Responsive-Portfolio/portfolio.html" target="_blank"
+                        rel="noopener noreferrer">Portfolio</a>
                 </div>
                 <div class="col-sm-3 team-member">
                     <div class="team-img">
@@ -106,7 +118,9 @@
                     </div>
                     <h4>Eli</h4>
                     <p>Fitness</p>
-                    <a class="btn btn-outline-light" href="https://evg7393.github.io/Responsive-Portfolio/portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
+                    <a class="btn btn-outline-light"
+                        href="https://evg7393.github.io/Responsive-Portfolio/portfolio.html" target="_blank"
+                        rel="noopener noreferrer">Portfolio</a>
                 </div>
                 <div class="col-sm-3 team-member">
                     <div class="team-img">
@@ -114,7 +128,8 @@
                     </div>
                     <h4>Chris</h4>
                     <p>Food & Style</p>
-                    <a class="btn btn-outline-light" href="https://crcass.github.io/portfolio/" target="_blank" rel="noopener noreferrer">Portfolio</a>
+                    <a class="btn btn-outline-light" href="https://crcass.netlify.com" target="_blank"
+                        rel="noopener noreferrer">Portfolio</a>
                 </div>
                 <div class="col-sm-3 team-member">
                     <div class="team-img">
@@ -122,7 +137,9 @@
                     </div>
                     <h4>Daniel</h4>
                     <p>Maps</p>
-                    <a class="btn btn-outline-light" href="https://danbrit.github.io/responsive-portfolio/portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
+                    <a class="btn btn-outline-light"
+                        href="https://danbrit.github.io/responsive-portfolio/portfolio.html" target="_blank"
+                        rel="noopener noreferrer">Portfolio</a>
                 </div>
             </div>
         </div>
@@ -146,7 +163,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#cityModal" id="name-btn">Next!</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal"
+                        data-target="#cityModal" id="name-btn">Next!</button>
                 </div>
             </div>
         </div>
@@ -173,7 +191,8 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#detailsModal" id="city-btn">Onward!</button>
+                    <button type="submit" class="btn btn-primary" data-dismiss="modal" data-toggle="modal"
+                        data-target="#detailsModal" id="city-btn">Onward!</button>
                 </div>
             </div>
         </div>
@@ -205,7 +224,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#resultsModal" id="choices-btn">Let's Go!</button>
+                    <button type="submit" class="btn btn-primary" data-dismiss="modal" data-toggle="modal"
+                        data-target="#resultsModal" id="choices-btn">Let's Go!</button>
                 </div>
             </div>
         </div>
@@ -334,7 +354,8 @@
                                 <h2>Map</h2>
                                 <div class="card map-card">
                                     <div class="card-header" id="map-city">
-                                        <span id="map-name">City Name</span><span><span>Current Temp: </span><span id="map-temp">--</span>°</span>
+                                        <span id="map-name">City Name</span><span><span>Current Temp: </span><span
+                                                id="map-temp">--</span>°</span>
                                     </div>
                                     <div class="card-body">
                                         <div id="map">
@@ -351,7 +372,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close">Close</button>
-                    <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#saveModal" id="save-trigger">Save Info
+                    <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#saveModal"
+                        id="save-trigger">Save Info
                     </button>
                 </div>
             </div>
@@ -364,7 +386,8 @@
                 <div class="modal-content" id="save">
                     <div class="modal-header">
                         <h5 class="modal-title">Send a Signal</h5>
-                        <button type="button" class="close" data-toggle="modal" data-target="#saveModal">&times;</button>
+                        <button type="button" class="close" data-toggle="modal"
+                            data-target="#saveModal">&times;</button>
                     </div>
                     <div class="modal-body">
                         <h5 class="card-title">Enjoy Dinner</h5>
@@ -372,7 +395,8 @@
                         <p class="card-text test" id="savedChoice-food-address"></p>
                         <h5 class="card-title save-header">Maybe a show?</h5>
                         <p class="card-text test savedChoice-event"></p>
-                        <a class="card-text test" href="" target="_blank" rel="noopener noreferrer" id="savedChoice-event-buy">Click to Learn More</a>
+                        <a class="card-text test" href="" target="_blank" rel="noopener noreferrer"
+                            id="savedChoice-event-buy">Click to Learn More</a>
                         <h5 class="card-title save-header">Get that workout in</h5>
                         <p class="card-text user-exercise"></p>
                         <p class="card-text" id="user-exercise-address"></p>
@@ -380,8 +404,10 @@
                     <div class="modal-footer justify-content-between">
                         <label for="phone">Enter your phone #
                             <br>We'll send a Signal</label>
-                        <input type="tel" class="form-control" name="phone" id="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" minlength="10" maxlength="10">
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#saveModal" id="save-choices-btn">Send</button>
+                        <input type="tel" class="form-control" name="phone" id="phone"
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" minlength="10" maxlength="10">
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#saveModal"
+                            id="save-choices-btn">Send</button>
                     </div>
                 </div>
             </div>
@@ -400,10 +426,16 @@
 
     <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-database.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx2mBeHdyE4fngY5daB9i4IXK79Zy8_lA&callback=initMap" async defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx2mBeHdyE4fngY5daB9i4IXK79Zy8_lA&callback=initMap"
+        async defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="./assets/js/main.js"></script>
